--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -28,6 +28,36 @@
     "login_to_admin_portal": "Connexion à l'administration du portail",
     "OR": "OU"
   },
+  "userLoginPage": {
+    "title": "Administrateur Talawa",
+    "talawa_portal": "Portail D'Administrateur Talawa",
+    "fromPalisadoes": "Une application open source par les volontaires de la Fondation Palissades",
+    "login": "Connexion",
+    "register": "S'inscrire",
+    "firstName": "Prénom",
+    "lastName": "Nom de famille",
+    "email": "E-mail",
+    "password": "Mot de passe",
+    "atleast_8_char_long": "Au moins 8 caractères",
+    "Password_and_Confirm_password_mismatches.": "Le mot de passe et la confirmation du mot de passe ne correspondent pas.",
+    "confirmPassword": "Confirmez le mot de passe",
+    "forgotPassword": "Mot de passe oublié ?",
+    "enterEmail": "entrez l'e-mail",
+    "enterPassword": "Entrer le mot de passe",
+    "doNotOwnAnAccount": "Vous n'avez pas de compte ?",
+    "talawaApiUnavailable": "Le service Talawa-API n'est pas disponible. Est-il en cours d'exécution ? Vérifiez également votre connectivité réseau.",
+    "captchaError": "Erreur de captcha !",
+    "Please_check_the_captcha": "Veuillez vérifier le captcha.",
+    "Something_went_wrong": "Quelque chose s'est mal passé, veuillez réessayer plus tard.",
+    "passwordMismatches": "Le mot de passe et la confirmation du mot de passe ne correspondent pas.",
+    "fillCorrectly": "Remplissez tous les détails correctement.",
+    "notAuthorised": "Désolé ! vous n'êtes pas autorisé !",
+    "notFound": "Utilisateur introuvable !",
+    "successfullyRegistered": "Enregistré avec succès. Veuillez patienter jusqu'à ce que vous soyez approuvé.",
+    "userLogin": "Utilisateur en ligne",
+    "afterRegister": "Enregistré avec succès. Veuillez attendre que l'administrateur approuve votre demande.",
+    "OR": "OU"
+  },
   "latestEvents": {
     "eventCardTitle": "Événements à venir",
     "eventCardSeeAll": "Voir Tout",
