--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -25,8 +25,9 @@
     "notAuthorised": "¡Lo siento! ¡No estás autorizado!",
     "notFound": "¡Usuario no encontrado!",
     "successfullyRegistered": "Registrado con éxito. Espere hasta que sea aprobado",
-    "login_to_admin_portal": "Inicio de sesión en el portal de administración",
-    "OR": "O"
+    "OR": "O",
+    "admin": "ADMINISTRACIÓN",
+    "user": "USUARIO"
   },
   "latestEvents": {
     "eventCardTitle": "Próximos Eventos",
