--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -25,8 +25,9 @@
     "notAuthorised": "Sorry! you are not Authorised!",
     "notFound": "User not found!",
     "successfullyRegistered": "Successfully Registered. Please wait until you will be approved.",
-    "login_to_admin_portal": "Admin Portal Login",
-    "OR": "OR"
+    "OR": "OR",
+    "admin": "ADMIN",
+    "user": "USER"
   },
   "latestEvents": {
     "eventCardTitle": "Upcoming Events",
