Delete sample org bug fixed (#1257)
* Delete sample org bug fixed
#1217

* Added the test for the DeleteOrg component

* Changed the color of the delete org modal header to standard green color

* Successfully deleted sample org msg in make multilingual

* created a async wait() function

* passed 2000ms instead of adding wait twice

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -428,7 +428,8 @@
     "deleteMsg": "Voulez-vous supprimer cette organisation ?",
     "cancel": "Annuler",
     "confirmDelete": "Confirmer la suppression",
-    "longDelOrgMsg": "En cliquant sur le bouton Supprimer l'organisation, l'organisation sera définitivement supprimée ainsi que ses événements, balises et toutes les données associées."
+    "longDelOrgMsg": "En cliquant sur le bouton Supprimer l'organisation, l'organisation sera définitivement supprimée ainsi que ses événements, balises et toutes les données associées.",
+    "successfullyDeletedSampleOrganization": "Exemple d'organisation supprimé avec succès"
   },
   "userUpdate": {
     "firstName": "Prénom",
