--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -10,6 +10,10 @@
     "email": "Email",
     "password": "Password",
     "atleast_8_char_long": "Atleast 8 Character long",
+    "atleast_6_char_long": "Atleast 6 Character long",
+    "firstName_invalid": "First name should contain only lower and upper case letters",
+    "lastName_invalid": "First name should contain only lower and upper case letters",
+    "password_invalid": "Password should contain atleast one lowercase, one uppercase, one numeric value and one special character",
     "Password_and_Confirm_password_mismatches.": "Password and Confirm password mismatches.",
     "confirmPassword": "Confirm Password",
     "forgotPassword": "Forgot Password ?",
