--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -30,7 +30,11 @@
     "notFound": "User not found!",
     "successfullyRegistered": "Successfully Registered. Please wait until you will be approved.",
     "login_to_admin_portal": "Admin Portal Login",
-    "OR": "OR"
+    "OR": "OR",
+    "lowercase_check": "Atleast one lowercase letter",
+    "uppercase_check": "Atleast one uppercase letter",
+    "numeric_value_check": "Atleaset one numeric value",
+    "special_char_check": "Atleast one special character"
   },
   "latestEvents": {
     "eventCardTitle": "Upcoming Events",
