--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -10,6 +10,11 @@
     "email": "ईमेल",
     "password": "पासवर्ड",
     "atleast_8_char_long": "कम से कम 8 कैरेक्टर लंबा",
+    "atleast_6_char_long": "कम से कम 6 अक्षर लंबा",
+    "firstName_invalid": "प्रथम नाम में केवल छोटे और बड़े अक्षर होने चाहिए",
+    "lastName_invalid": "अंतिम नाम में केवल छोटे और बड़े अक्षर होने चाहिए",
+    "password_invalid": "पासवर्ड में कम से कम एक लोअरकेस अक्षर, एक अपरकेस अक्षर, एक संख्यात्मक मान और एक विशेष अक्षर होना चाहिए",
+    "email_invalid": "ईमेल में कम से कम 8 अक्षर होने चाहिए",
     "Password_and_Confirm_password_mismatches.": "पासवर्ड और पुष्टि पासवर्ड बेमेल।",
     "confirmPassword": "पासवर्ड की पुष्टि कीजिये",
     "forgotPassword": "पासवर्ड भूल गए ?",
@@ -26,7 +31,11 @@
     "notFound": "उपयोगकर्ता नहीं मिला!",
     "successfullyRegistered": "सफलतापूर्वक पंजीकृत। कृपया स्वीकृत होने तक प्रतीक्षा करें।",
     "login_to_admin_portal": "एडमिन पोर्टल लॉगिन",
-    "OR": "या"
+    "OR": "या",
+    "lowercase_check": "कम से कम एक छोटा अक्षर",
+    "uppercase_check": "कम से कम एक बड़ा अक्षर",
+    "numeric_value_check": "कम से कम एक संख्यात्मक मान",
+    "special_char_check": "कम से कम एक विशेष पात्र"
   },
   "userLoginPage": {
     "title": "तलवा व्यवस्थापक",
