--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -10,6 +10,11 @@
     "email": "Correo electrónico",
     "password": "Clave",
     "atleast_8_char_long": "Al menos 8 caracteres de largo",
+    "atleast_6_char_long": "Al menos 6 caracteres de largo",
+    "firstName_invalid": "El nombre debe contener solo letras minúsculas y mayúsculas.",
+    "lastName_invalid": "El apellido debe contener solo letras minúsculas y mayúsculas.",
+    "password_invalid": "La contraseña debe contener al menos una letra minúscula, una letra mayúscula, un valor numérico y un carácter especial.",
+    "email_invalid": "El correo electrónico debe tener al menos 8 caracteres.",
     "Password_and_Confirm_password_mismatches.": "Contraseña y Confirmar contraseña no coinciden.",
     "confirmPassword": "Confirmar contraseña",
     "forgotPassword": "Has olvidado tu contraseña ?",
@@ -26,7 +31,11 @@
     "notFound": "¡Usuario no encontrado!",
     "successfullyRegistered": "Registrado con éxito. Espere hasta que sea aprobado",
     "login_to_admin_portal": "Inicio de sesión en el portal de administración",
-    "OR": "O"
+    "OR": "O",
+    "lowercase_check": "Al menos una letra mayuscula",
+    "uppercase_check": "Al menos una letra minúscula",
+    "numeric_value_check": "Al menos un valor numérico",
+    "special_char_check": "Al menos un carácter especial"
   },
   "userLoginPage": {
     "title": "Administrador Talawa",
