feat: Add User and Admin toggle on login pages (#1371)
* feat: Add User and Admin toggle on login pages

* Refactoring and Design adjustments

* fix conflicting files

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -30,8 +30,9 @@
     "notAuthorised": "Sorry! you are not Authorised!",
     "notFound": "User not found!",
     "successfullyRegistered": "Successfully Registered. Please wait until you will be approved.",
-    "login_to_admin_portal": "Admin Portal Login",
     "OR": "OR",
+    "admin": "ADMIN",
+    "user": "USER",
     "lowercase_check": "Atleast one lowercase letter",
     "uppercase_check": "Atleast one uppercase letter",
     "numeric_value_check": "Atleaset one numeric value",
