--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -30,8 +30,9 @@
     "notAuthorised": "Désolé ! vous n'êtes pas autorisé !",
     "notFound": "Utilisateur introuvable !",
     "successfullyRegistered": "Enregistré avec succès. Veuillez patienter jusqu'à ce que vous soyez approuvé.",
-    "login_to_admin_portal": "Connexion à l'administration du portail",
     "OR": "OU",
+    "admin": "ADMIN",
+    "user": "UTILISATEUR",
     "lowercase_check": "Au moins une lettre minuscule",
     "uppercase_check": "Au moins une lettre majuscule",
     "special_char_check": "Au moins un caractère spécial",
