--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -30,8 +30,9 @@
     "notAuthorised": "¡Lo siento! ¡No estás autorizado!",
     "notFound": "¡Usuario no encontrado!",
     "successfullyRegistered": "Registrado con éxito. Espere hasta que sea aprobado",
-    "login_to_admin_portal": "Inicio de sesión en el portal de administración",
     "OR": "O",
+    "admin": "ADMINISTRACIÓN",
+    "user": "USUARIO",
     "lowercase_check": "Al menos una letra mayuscula",
     "uppercase_check": "Al menos una letra minúscula",
     "numeric_value_check": "Al menos un valor numérico",
