--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -30,8 +30,9 @@
     "notAuthorised": "क्षमा करें! आप अधिकृत नहीं हैं!",
     "notFound": "उपयोगकर्ता नहीं मिला!",
     "successfullyRegistered": "सफलतापूर्वक पंजीकृत। कृपया स्वीकृत होने तक प्रतीक्षा करें।",
-    "login_to_admin_portal": "एडमिन पोर्टल लॉगिन",
     "OR": "या",
+    "admin": "व्यवस्थापक",
+    "user": "उपयोगकर्ता",
     "lowercase_check": "कम से कम एक छोटा अक्षर",
     "uppercase_check": "कम से कम एक बड़ा अक्षर",
     "numeric_value_check": "कम से कम एक संख्यात्मक मान",
