--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -88,7 +88,7 @@
     "createSampleOrganization": "创建示范组织",
     "description": "描述",
     "location": "地點",
-    "isPublic": "是否公開",
+    "isPubluserRegistrationRequiredic": "需要用户注册",
     "visibleInSearch": "在搜索中可見",
     "displayImage": "顯示圖像",
     "enterName": "输入名字",
@@ -464,7 +464,7 @@
     "description": "描述",
     "location": "地點",
     "displayImage": "顯示圖像",
-    "isPublic": "公开",
+    "userRegistrationRequired": "需要用户注册",
     "isVisibleInSearch": "在搜索中可见",
     "saveChanges": "保存更改",
     "cancel": "取消",
