Renamed Private Organisation to userRegistrationRequired (#1384)
* Rename isPublic to userRegistrationRequired

* Convert Private Orgs to userRegistrationRequired Orgs

* Fixes failed test

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -128,7 +128,7 @@
     "createSampleOrganization": "Create Sample Organization",
     "description": "Description",
     "location": "Location",
-    "isPublic": "Is Public",
+    "userRegistrationRequired": "User Registration Required",
     "visibleInSearch": "Visible In Search",
     "displayImage": "Display Image",
     "enterName": "Enter Name",
@@ -486,7 +486,7 @@
     "description": "Description",
     "location": "Location",
     "displayImage": "Display Image",
-    "isPublic": "Public",
+    "userRegistrationRequired": "User Registration Required",
     "isVisibleInSearch": "Visible in Search",
     "saveChanges": "Save Changes",
     "enterNameOrganization": "Enter Organization Name",
