--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -127,7 +127,7 @@
     "createSampleOrganization": "Créer une organisation d'exemple",
     "description": "La description",
     "location": "Emplacement",
-    "isPublic": "Est publique",
+    "userRegistrationRequired": "enregistrement requis",
     "visibleInSearch": "Visible dans la recherche",
     "displayImage": "Afficher l'image",
     "enterName": "Entrez le nom",
@@ -484,7 +484,7 @@
     "description": "La description",
     "location": "emplacement",
     "displayImage": "Afficher l'image",
-    "isPublic": "Public",
+    "userRegistrationRequired": "enregistrement requis",
     "isVisibleInSearch": "Visible dans la recherche",
     "saveChanges": "Sauvegarder les modifications",
     "enterNameOrganization": "Entrez le nom de l'organisation",
