--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -127,7 +127,7 @@
     "createSampleOrganization": " सैंपल संगठन बनाएं",
     "description": "विवरण",
     "location": "स्थान",
-    "isPublic": "सार्वजनिक है",
+    "userRegistrationRequired": "उपयोगकर्ता पंजीकरण आवश्यक",
     "visibleInSearch": "खोज में दृश्यमान",
     "displayImage": "प्रदर्शन छवि",
     "enterName": "नाम दर्ज करें",
@@ -483,7 +483,7 @@
     "description": "विवरण",
     "location": "जगह",
     "displayImage": "प्रदर्शन छवि",
-    "isPublic": "सार्वजनिक",
+    "userRegistrationRequired": "उपयोगकर्ता पंजीकरण आवश्यक",
     "isVisibleInSearch": "खोज में दिखाए जा सकते हैं",
     "saveChanges": "परिवर्तनों को सुरक्षित करें",
     "cancel": "रद्द करना",
