--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -127,7 +127,7 @@
     "createSampleOrganization": "Crear organización de muestra",
     "description": "Descripción",
     "location": "Ubicación",
-    "isPublic": "Es público",
+    "userRegistrationRequired": "Registro de usuario requerido",
     "visibleInSearch": "Visible en la búsqueda",
     "displayImage": "Mostrar imagen",
     "enterName": "Ingrese su nombre",
@@ -483,7 +483,7 @@
     "description": "Descripción",
     "location": "ubicación",
     "displayImage": "Mostrar imagen",
-    "isPublic": "Público",
+    "userRegistrationRequired": "Registro de usuario requerido",
     "isVisibleInSearch": "Visible en la búsqueda",
     "saveChanges": "Guardar cambios",
     "cancel": "Cancelar",
