--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -10,11 +10,6 @@
     "email": "Email",
     "password": "Password",
     "atleast_8_char_long": "Atleast 8 Character long",
-    "atleast_6_char_long": "Atleast 6 Character long",
-    "firstName_invalid": "First name should contain only lower and upper case letters",
-    "lastName_invalid": "Last name should contain only lower and upper case letters",
-    "password_invalid": "Password should contain atleast one lowercase letter, one uppercase letter, one numeric value and one special character",
-    "email_invalid": "Email should have atleast 8 characters",
     "Password_and_Confirm_password_mismatches.": "Password and Confirm password mismatches.",
     "confirmPassword": "Confirm Password",
     "forgotPassword": "Forgot Password ?",
@@ -30,42 +25,7 @@
     "notAuthorised": "Sorry! you are not Authorised!",
     "notFound": "User not found!",
     "successfullyRegistered": "Successfully Registered. Please wait until you will be approved.",
-    "OR": "OR",
-    "admin": "ADMIN",
-    "user": "USER",
-    "lowercase_check": "Atleast one lowercase letter",
-    "uppercase_check": "Atleast one uppercase letter",
-    "numeric_value_check": "Atleaset one numeric value",
-    "special_char_check": "Atleast one special character"
-  },
-  "userLoginPage": {
-    "title": "Talawa Admin",
-    "fromPalisadoes": "An open source application by Palisadoes Foundation volunteers",
-    "talawa_portal": "Talawa Admin Portal",
-    "login": "Login",
-    "register": "Register",
-    "firstName": "First Name",
-    "lastName": "Last Name",
-    "email": "Email",
-    "password": "Password",
-    "atleast_8_char_long": "Atleast 8 Character long",
-    "Password_and_Confirm_password_mismatches.": "Password and Confirm password mismatches.",
-    "confirmPassword": "Confirm Password",
-    "forgotPassword": "Forgot Password ?",
-    "enterEmail": "Enter Email",
-    "enterPassword": "Enter Password",
-    "doNotOwnAnAccount": "Do not own an account?",
-    "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too.",
-    "captchaError": "Captcha Error!",
-    "Please_check_the_captcha": "Please, check the captcha.",
-    "Something_went_wrong": "Something went wrong, Please try after sometime.",
-    "passwordMismatches": "Password and Confirm password mismatches.",
-    "fillCorrectly": "Fill all the Details Correctly.",
-    "notAuthorised": "Sorry! you are not Authorised!",
-    "notFound": "User not found!",
-    "successfullyRegistered": "Successfully Registered. Please wait until you will be approved.",
-    "userLogin": "User Login",
-    "afterRegister": "Successfully registered. Please wait for admin to approve your request.",
+    "login_to_admin_portal": "Admin Portal Login",
     "OR": "OR"
   },
   "latestEvents": {
@@ -87,7 +47,8 @@
   "leftDrawer": {
     "talawaAdminPortal": "Talawa Admin Portal",
     "menu": "Menu",
-    "my organizations": "My Organizations",
+    "organizations": "Organizations",
+    "requests": "Requests",
     "users": "Users",
     "logout": "Logout"
   },
@@ -123,18 +84,16 @@
     "designation": "Designation",
     "email": "Email",
     "searchByName": "Search By Name",
-    "my organizations": "My Organizations",
+    "organizations": "Organizations",
     "createOrganization": "Create Organization",
     "createSampleOrganization": "Create Sample Organization",
     "description": "Description",
     "location": "Location",
-    "userRegistrationRequired": "User Registration Required",
+    "isPublic": "Is Public",
     "visibleInSearch": "Visible In Search",
     "displayImage": "Display Image",
     "enterName": "Enter Name",
     "sort": "Sort",
-    "Latest": "Latest",
-    "Earliest": "Earliest",
     "filter": "Filter",
     "cancel": "Cancel",
     "noOrgErrorTitle": "Organizations Not Found",
@@ -188,8 +147,27 @@
     "noOrgError": "Organizations not found, please create an organization through dashboard",
     "roleUpdated": "Role Updated.",
     "noResultsFoundFor": "No results found for ",
-    "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too.",
-    "cancel": "Cancel"
+    "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
+  },
+  "requests": {
+    "title": "Talawa Requests",
+    "searchByName": "Search By Name",
+    "requests": "Requests",
+    "name": "Name",
+    "email": "Email",
+    "accept": "Accept",
+    "reject": "Reject",
+    "enterName": "Enter Name",
+    "endOfResults": "End of results",
+    "loadingRequests": "Loading Requests...",
+    "noRequestFound": "No Request Found",
+    "sort": "Sort",
+    "filter": "Filter",
+    "noOrgError": "Organizations not found, please create an organization through dashboard",
+    "userApproved": "User Approved",
+    "userRejected": "User Rejected",
+    "noResultsFoundFor": "No results found for ",
+    "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "dashboard": {
     "title": "Dashboard",
@@ -222,7 +200,8 @@
     "users": "Users",
     "searchName": "Enter Name",
     "searchevent": "Enter Event",
-    "searchFullName": "Enter Full Name"
+    "searchFirstName": "Enter First Name",
+    "searchLastName": "Enter Last Name"
   },
   "userListCard": {
     "joined": "Joined",
@@ -309,6 +288,7 @@
     "postDetails": "Post Details",
     "postTitle1": "Write title of the post",
     "postTitle": "Title",
+    "addMedia": "Upload Photo or Video",
     "information": "Information",
     "information1": "Write information of the post",
     "image": "Post Image",
@@ -325,7 +305,8 @@
     "Oldest": "Oldest First",
     "Latest": "Latest First",
     "sortPost": "Sort Post",
-    "tag": " Your browser does not support the video tag"
+    "tag": " Your browser does not support the video tag",
+    "postCreatedSuccess": "Congratulations! You have Posted Something."
   },
   "postNotFound": {
     "post": "Post",
@@ -439,8 +420,7 @@
     "settings": "Settings",
     "noData": "No data",
     "otherSettings": "Other Settings",
-    "changeLanguage": "Change Language",
-    "manageCustomFields": "Manage Custom Fields"
+    "changeLanguage": "Change Language"
   },
   "deleteOrg": {
     "deleteOrganization": "Delete Organization",
@@ -448,8 +428,7 @@
     "deleteMsg": "Do you want to delete this organization?",
     "cancel": "Cancel",
     "confirmDelete": "Confirm Delete",
-    "longDelOrgMsg": "By clicking on Delete Organization button the organization will be permanently deleted along with its events, tags and all related data.",
-    "successfullyDeletedSampleOrganization": "Successfully deleted sample Organization"
+    "longDelOrgMsg": "By clicking on Delete Organization button the organization will be permanently deleted along with its events, tags and all related data."
   },
   "userUpdate": {
     "firstName": "First Name",
@@ -486,7 +465,7 @@
     "description": "Description",
     "location": "Location",
     "displayImage": "Display Image",
-    "userRegistrationRequired": "User Registration Required",
+    "isPublic": "Public",
     "isVisibleInSearch": "Visible in Search",
     "saveChanges": "Save Changes",
     "enterNameOrganization": "Enter Organization Name",
@@ -620,12 +599,7 @@
   "home": {
     "feed": "Feed",
     "pinnedPosts": "View Pinned Posts",
-    "somethingOnYourMind": "Something on your mind?",
-    "addPost": "Add Post",
-    "startPost": "Start a post",
-    "media": "Media",
-    "event": "Event",
-    "article": "Article"
+    "somethingOnYourMind": "Something on your mind?"
   },
   "settings": {
     "profileSettings": "Profile Settings",
@@ -633,10 +607,7 @@
     "lastName": "Last Name",
     "emailAddress": "Email Address",
     "updateImage": "Update Image",
-    "saveChanges": "Save Changes",
-    "updateProfile": "Update Profile",
-    "otherSettings": "Other Settings",
-    "changeLanguage": "Change Language"
+    "save": "Save"
   },
   "donate": {
     "donateTo": "Donate to",
@@ -707,11 +678,7 @@
     "EXname": "Ex. Cookie Shop",
     "EXlink": "Ex. http://yourwebsite.com/photo",
     "register": "Create Advertisement",
-    "close": "Close ",
-    "deleteAdvertisement": "Delete Advertisement",
-    "deleteAdvertisementMsg": "Do you want to remove this advertisement?",
-    "no": "No",
-    "yes": "Yes"
+    "close": "Close "
   },
   "userChat": {
     "chat": "Chat",
@@ -721,16 +688,5 @@
   "userChatRoom": {
     "selectContact": "Select a contact to start conversation",
     "sendMessage": "Send Message"
-  },
-  "orgProfileField": {
-    "loading": "Loading...",
-    "noCustomField": "No custom fields available",
-    "customFieldName": "Field Name",
-    "enterCustomFieldName": "Enter Field name",
-    "customFieldType": "Field Type",
-    "saveChanges": "Save Changes",
-    "Remove Custom Field": "Remove Custom Field",
-    "fieldSuccessMessage": "Field added successfully",
-    "fieldRemovalSuccess": "Field removed successfully"
   }
 }
