--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -10,11 +10,6 @@
     "email": "E-mail",
     "password": "Mot de passe",
     "atleast_8_char_long": "Au moins 8 caractères",
-    "atleast_6_char_long": "Au moins 6 caractères",
-    "firstName_invalid": "Le prénom ne doit contenir que des lettres minuscules et majuscules",
-    "lastName_invalid": "Le nom de famille ne doit contenir que des lettres minuscules et majuscules",
-    "password_invalid": "Le mot de passe doit contenir au moins une lettre minuscule, une lettre majuscule, une valeur numérique et un caractère spécial",
-    "email_invalid": "L'e-mail doit contenir au moins 8 caractères",
     "Password_and_Confirm_password_mismatches.": "Le mot de passe et la confirmation du mot de passe ne correspondent pas.",
     "confirmPassword": "Confirmez le mot de passe",
     "forgotPassword": "Mot de passe oublié ?",
@@ -30,53 +25,13 @@
     "notAuthorised": "Désolé ! vous n'êtes pas autorisé !",
     "notFound": "Utilisateur introuvable !",
     "successfullyRegistered": "Enregistré avec succès. Veuillez patienter jusqu'à ce que vous soyez approuvé.",
-    "OR": "OU",
-    "admin": "ADMIN",
-    "user": "UTILISATEUR",
-    "lowercase_check": "Au moins une lettre minuscule",
-    "uppercase_check": "Au moins une lettre majuscule",
-    "special_char_check": "Au moins un caractère spécial",
-    "numeric_value_check": "Au moins une valeur numérique"
-  },
-  "userLoginPage": {
-    "title": "Administrateur Talawa",
-    "talawa_portal": "Portail D'Administrateur Talawa",
-    "fromPalisadoes": "Une application open source par les volontaires de la Fondation Palissades",
-    "login": "Connexion",
-    "register": "S'inscrire",
-    "firstName": "Prénom",
-    "lastName": "Nom de famille",
-    "email": "E-mail",
-    "password": "Mot de passe",
-    "atleast_8_char_long": "Au moins 8 caractères",
-    "Password_and_Confirm_password_mismatches.": "Le mot de passe et la confirmation du mot de passe ne correspondent pas.",
-    "confirmPassword": "Confirmez le mot de passe",
-    "forgotPassword": "Mot de passe oublié ?",
-    "enterEmail": "entrez l'e-mail",
-    "enterPassword": "Entrer le mot de passe",
-    "doNotOwnAnAccount": "Vous n'avez pas de compte ?",
-    "talawaApiUnavailable": "Le service Talawa-API n'est pas disponible. Est-il en cours d'exécution ? Vérifiez également votre connectivité réseau.",
-    "captchaError": "Erreur de captcha !",
-    "Please_check_the_captcha": "Veuillez vérifier le captcha.",
-    "Something_went_wrong": "Quelque chose s'est mal passé, veuillez réessayer plus tard.",
-    "passwordMismatches": "Le mot de passe et la confirmation du mot de passe ne correspondent pas.",
-    "fillCorrectly": "Remplissez tous les détails correctement.",
-    "notAuthorised": "Désolé ! vous n'êtes pas autorisé !",
-    "notFound": "Utilisateur introuvable !",
-    "successfullyRegistered": "Enregistré avec succès. Veuillez patienter jusqu'à ce que vous soyez approuvé.",
-    "userLogin": "Utilisateur en ligne",
-    "afterRegister": "Enregistré avec succès. Veuillez attendre que l'administrateur approuve votre demande.",
+    "login_to_admin_portal": "Connexion à l'administration du portail",
     "OR": "OU"
   },
   "latestEvents": {
     "eventCardTitle": "Événements à venir",
     "eventCardSeeAll": "Voir Tout",
     "noEvents": "Aucun événement à venir"
-  },
-  "latestPosts": {
-    "latestPostsTitle": "Dernières Publications",
-    "seeAllLink": "Voir Tout",
-    "noPostsCreated": "Aucune Publication Créée"
   },
   "listNavbar": {
     "talawa_portal": "Portail D'Administrateur Talawa",
@@ -87,7 +42,8 @@
   "leftDrawer": {
     "talawaAdminPortal": "Portail d'administration Talawa",
     "menu": "Menu",
-    "my organizations": "Mes Organisations",
+    "organizations": "Organisations",
+    "requests": "Demandes",
     "users": "Utilisateurs",
     "logout": "Déconnexion"
   },
@@ -122,18 +78,16 @@
     "designation": "La désignation",
     "email": "E-mail",
     "searchByName": "Rechercher par nom",
-    "my organizations": "Mes Organisations",
+    "organizations": "Organisations",
     "createOrganization": "Créer une organisation",
     "createSampleOrganization": "Créer une organisation d'exemple",
     "description": "La description",
     "location": "Emplacement",
-    "userRegistrationRequired": "enregistrement requis",
+    "isPublic": "Est publique",
     "visibleInSearch": "Visible dans la recherche",
     "displayImage": "Afficher l'image",
     "enterName": "Entrez le nom",
     "sort": "Trier",
-    "Earliest": "Le plus tôt",
-    "Latest": "Dernière",
     "filter": "Filtre",
     "cancel": "Annuler",
     "endOfResults": "Fin des résultats",
@@ -183,8 +137,26 @@
     "filter": "Filtre",
     "roleUpdated": "Rôle mis à jour.",
     "noResultsFoundFor": "Aucun résultat trouvé pour ",
-    "talawaApiUnavailable": "Le service Talawa-API n'est pas disponible. Est-il en cours d'exécution ? Vérifiez également votre connectivité réseau.",
-    "cancel": "Annuler"
+    "talawaApiUnavailable": "Le service Talawa-API n'est pas disponible. Est-il en cours d'exécution ? Vérifiez également votre connectivité réseau."
+  },
+  "requests": {
+    "title": "Demandes Talawa",
+    "searchByName": "Recherche par nom",
+    "requests": "Demandes",
+    "name": "Nom",
+    "email": "E-mail",
+    "accept": "Accepter",
+    "reject": "Rejeter",
+    "enterName": "Entrez le nom",
+    "endOfResults": "Fin des résultats",
+    "loadingRequests": "Chargement des demandes...",
+    "noRequestFound": "Aucune demande trouvée",
+    "sort": "Trier",
+    "filter": "Filtre",
+    "userApproved": "Approuvé par l'utilisateur",
+    "userRejected": "Utilisateur rejeté",
+    "noResultsFoundFor": "Aucun résultat trouvé pour ",
+    "talawaApiUnavailable": "Le service Talawa-API n'est pas disponible. Est-il en cours d'exécution ? Vérifiez également votre connectivité réseau."
   },
   "dashboard": {
     "title": "Tableau de bord",
@@ -305,6 +277,7 @@
     "postDetails": "Détails de la publication",
     "postTitle1": "Écrire le titre de la publication",
     "postTitle": "Titre",
+    "addMedia": "Télécharger une photo ou une vidéo",
     "information": "Informations",
     "information1": "Écrire les informations de la publication",
     "image": "Image de la publication",
@@ -321,7 +294,8 @@
     "Oldest": "Les plus anciennes d'abord",
     "Latest": "Les plus récentes d'abord",
     "sortPost": "Trier les publications",
-    "tag": "Votre navigateur ne prend pas en charge la balise vidéo"
+    "tag": "Votre navigateur ne prend pas en charge la balise vidéo",
+    "postCreatedSuccess": "Félicitations ! Vous avez publié quelque chose."
   },
   "postNotFound": {
     "post": "Poste",
@@ -437,8 +411,7 @@
     "settings": "Réglages",
     "noData": "Pas de données",
     "otherSettings": "Autres paramètres",
-    "changeLanguage": "Changer la langue",
-    "manageCustomFields": "Gérer les Champs Personnalisés"
+    "changeLanguage": "Changer la langue"
   },
   "deleteOrg": {
     "deleteOrganization": "Supprimer l'organisation",
@@ -446,8 +419,7 @@
     "deleteMsg": "Voulez-vous supprimer cette organisation ?",
     "cancel": "Annuler",
     "confirmDelete": "Confirmer la suppression",
-    "longDelOrgMsg": "En cliquant sur le bouton Supprimer l'organisation, l'organisation sera définitivement supprimée ainsi que ses événements, balises et toutes les données associées.",
-    "successfullyDeletedSampleOrganization": "Exemple d'organisation supprimé avec succès"
+    "longDelOrgMsg": "En cliquant sur le bouton Supprimer l'organisation, l'organisation sera définitivement supprimée ainsi que ses événements, balises et toutes les données associées."
   },
   "userUpdate": {
     "firstName": "Prénom",
@@ -484,7 +456,7 @@
     "description": "La description",
     "location": "emplacement",
     "displayImage": "Afficher l'image",
-    "userRegistrationRequired": "enregistrement requis",
+    "isPublic": "Public",
     "isVisibleInSearch": "Visible dans la recherche",
     "saveChanges": "Sauvegarder les modifications",
     "enterNameOrganization": "Entrez le nom de l'organisation",
@@ -616,12 +588,7 @@
   "home": {
     "feed": "Alimentation",
     "pinnedPosts": "Afficher les publications épinglées",
-    "somethingOnYourMind": "Quelque chose dans votre esprit?",
-    "addPost": "Ajouter une publication",
-    "startPost": "Commencer une publication",
-    "media": "Médias",
-    "event": "Événement",
-    "article": "Article"
+    "somethingOnYourMind": "Quelque chose dans votre esprit?"
   },
   "settings": {
     "profileSettings": "Paramètres de profil",
@@ -629,10 +596,7 @@
     "lastName": "Nom de famille",
     "emailAddress": "Adresse e-mail",
     "updateImage": "Mettre à jour l'image",
-    "saveChanges": "Sauvegarder les modifications",
-    "updateProfile": "Mettre à jour le profil",
-    "otherSettings": "Autres paramètres",
-    "changeLanguage": "Changer la langue"
+    "save": "Sauvegarder"
   },
   "donate": {
     "donateTo": "Faire un don à",
@@ -692,12 +656,7 @@
     "activeAds": "Campagnes actives",
     "archievedAds": "Campagnes terminées",
     "pMessage": "Aucune publicité n'est présente pour cette campagne.",
-    "delete": "Supprimer",
-    "close": "Fermer",
-    "deleteAdvertisement": "Supprimer l'annonce",
-    "deleteAdvertisementMsg": "Voulez-vous supprimer cette annonce ?",
-    "no": "Non",
-    "yes": "Oui"
+    "delete": "Supprimer"
   },
   "userChat": {
     "chat": "Chat",
@@ -707,16 +666,5 @@
   "userChatRoom": {
     "selectContact": "Sélectionnez un contact pour démarrer la conversation",
     "sendMessage": "Envoyer le message"
-  },
-  "orgProfileField": {
-    "loading": "Chargement...",
-    "noCustomField": "Aucun champ personnalisé disponible",
-    "customFieldName": "Nom du champ",
-    "enterCustomFieldName": "Entrez le nom du champ",
-    "customFieldType": "Type de champ",
-    "saveChanges": "Enregistrer les modifications",
-    "Supprimer le champ personnalisé": "Supprimer le champ personnalisé",
-    "fieldSuccessMessage": "Champ ajouté avec succès",
-    "fieldRemovalSuccess": "Champ supprimé avec succès"
   }
 }
